--- a/dev/sass/pages/index.sass
+++ b/dev/sass/pages/index.sass
@@ -50,6 +50,8 @@
 
       .el-btn
         float: right
+        &:hover
+          text-decoration: none
         @media (max-width: $screen-xs-max)
           float: none
           margin-top: 20px
