--- a/dev/templates/specialization.html
+++ b/dev/templates/specialization.html
@@ -70,8 +70,10 @@
                                 <span>6 500 </span>рублей
                             </div>
                             <div class="wrap-btn">
-                                <a href="#" class="el-btn pur-style">Записаться
+                                <a href="#" class="el-btn pur-style js-toggle">Записаться
                                     <span>начало 5 сентября <img src="images/icons/arrow-down-pure-o.svg" alt="icon"></span>
+                                    <span class="item-time border">с 25 сентября <span class="status">уже идет</span></span>
+                                    <span class="item-time">с 15 апреля</span>
                                 </a>
                             </div>
                             <ul class="list-nav">
