--- a/dev/sass/pages/course.sass
+++ b/dev/sass/pages/course.sass
@@ -151,13 +151,22 @@
       .el-btn
         padding: 35px 15px 30px
         width: 100%
-        height: 100px
+        height: auto
         border: none
         border-radius: 5px
         font-weight: 400
         font-size: 24px
         &.center
           padding: 40px 15px
+        &.js-open
+          padding-bottom: 15px
+          .item-time
+            display: block
+            margin: 10px -15px 0
+          span
+            margin-bottom: 30px
+            img
+              transform: rotate(180deg)
 
         &:hover
           background-color: #CC455C
@@ -166,10 +175,24 @@
         span
           display: block
           margin-top: 6px
+          margin-bottom: 10px
           color: white
-          font-size: 12px
+          font-size: 14px
           img
             vertical-align: middle
+        .item-time
+          display: none
+          text-align: left
+          font-size: 14px
+          padding: 0 20px
+          margin: 10px -15px 0
+          &.border
+            border-bottom: 1px solid rgba(white, .3)
+            padding-bottom: 10px
+          .status
+            float: right
+            margin-top: 0
+            opacity: .7
 
     .price
       margin: 20px 0
