--- a/dev/sass/pages/home.sass
+++ b/dev/sass/pages/home.sass
@@ -199,7 +199,7 @@
           top: 0
           right: 0
           bottom: 0
-          width: 40%
+          width: 41%
           background-color: rgba(#171b2d, .7)
           content: ""
 
@@ -226,7 +226,7 @@
           text-align: center
           text-decoration: none
           &:hover
-            color: $color-pure
+            color: white
 
       .img-wrap
         position: relative
