--- a/dev/sass/pages/personal.sass
+++ b/dev/sass/pages/personal.sass
@@ -148,7 +148,7 @@
       bottom: 31px
       visibility: hidden
       width: 290px
-      background-color: white
+      background-color: #eee
       box-shadow: 0px 9px 24px 0px rgba(230, 234, 248, 0.4)
       opacity: 0
       .title
@@ -198,13 +198,14 @@
             margin-top: -9px
             width: 18px
             height: 18px
-            background: url(../images/icons/info-icon.svg) no-repeat center
+            background: url(../images/icons/info-icon-white.svg) no-repeat center/cover
             content: ''
             opacity: 0
 
           &:hover
-            background-color: #eff4f7
+            background-color: $color-blue
             cursor: pointer
+            color: white
             &:after
               visibility: visible
               opacity: 1
